Atualiza agente core-typescript-pro com melhorias e nova versão
- Renomeia o agente para incluir o prefixo "core-" e aprimora sua descrição, refletindo expertise em sistemas de tipagem avançada e padrões empresariais.
- Expande a metodologia do agente, detalhando o processo de análise de requisitos de tipo, arquitetura de tipos e otimização de desempenho.
- Inclui exemplos de implementação e testes de segurança de tipo, garantindo uma experiência de desenvolvedor aprimorada.
- O agente agora utiliza o modelo sonnet e está na versão 2.0.

Essas alterações visam padronizar a nomenclatura, melhorar a clareza das funções e garantir que o agente reflita as melhores práticas atuais em TypeScript.